# octoprint-plugin-tool

./: .gitignore  .pre-commit-config.yaml  Taskfile.yml  pyproject.toml
.github/workflows/: ci.yml
octoprint_plugin_tool/: __init__.py
tests/: test_to_pyproject.py
tests/_files/pyproject-toml-only/input/: pyproject.toml
tests/_files/setup-py-and-pyproject-toml/: pyproject.toml
tests/_files/setup-py-and-pyproject-toml/expected/: MANIFEST.in  Taskfile.yml  pyproject.toml
