[build-system]
requires = [
    "setuptools>=68",
]
build-backend = "setuptools.build_meta"

[project]
name = "OctoPrint-RequestSpinner"
version = "0.2.0"
description = "Shows a little spinner in the web frontend when background requests are active"
authors = [
    { name = "Gina Häußge", email = "osd@foosel.net" },
]
requires-python = ">=3.7,<4"
dependencies = []
dynamic = [
    "license",
]

[project.entry-points."octoprint.plugin"]
requestspinner = "octoprint_requestspinner"

[project.urls]
Homepage = "https://github.com/OctoPrint/OctoPrint-RequestSpinner"

[project.optional-dependencies]
develop = [
    "go-task-bin",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = [
    "octoprint_requestspinner",
    "octoprint_requestspinner.*",
]
